Configurando banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://pabuf.ce6cnmyrn62e.us-east-2.rds.amazonaws.com:5432/cursomc
+spring.datasource.username=postgres
+spring.datasource.password=Admin2018
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.format_sql = true
 
